# xpasswd

./: HISTORY  INSTALL  INSTALL.en  MANIFEST  Makefile.in  Makefile.maintainer  README  README.en  THANKS  TODO  config.h.in  configure.in
doc/: passwd-cgi.txt  poppassd.txt  pty-tcsetattr.txt  upgrade.txt  xpasswd.txt
extra/: Makefile.in
extra/passwd-cgi/: Makefile.in  Subst.en.src  Subst.ja.src  csv-parse.pl  done.html.src  form.tmpl.src  index.pl  item.csv.src  subst.pl  test.query
extra/poppassd/: Makefile.in  poppassd.pl
include/: Makefile.global.in  config.h.in
src/: Makefile.in  authuser.c  authuser.h  chpasswd.c  chpasswd.h  define.h  pty.c  pty.h  util.c  util.h  xpasswd.c  xpasswd.h.in
